--- a/html/Contact.html
+++ b/html/Contact.html
@@ -85,6 +85,7 @@
                         <div class="status"></div>
                         <!-- <button type="submit" class="btn btn-primary">SEND
                             MESSAGE</button> -->
+                            <!-- Submit Button -->
                     </form>
                 </div>
             </div>
