--- a/html/Contact.html
+++ b/html/Contact.html
@@ -4,7 +4,7 @@
         <link
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             rel="stylesheet">
-        <link rel="stylesheet" href="Contant.css" type="text/css">
+        <link rel="stylesheet" href="/css/Contant.css" type="text/css">
         <title>Contact</title>
     </head>
     <body>
